@@ -30,7 +30,7 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
   <p class="np-text subtext ellipsis" v-else-if="playerStatus.current.album">{{playerStatus.current.album}}</p>
   <p class="np-text" v-else>&nbsp;</p>
   <p class="np-text np-tech">{{playerStatus.current.technicalInfo}}</p>
-  <p class="np-text np-time">{{formattedTime}}</p>
+  <p class="np-text np-time cursor" @click="toggleTime()">{{formattedTime}}</p>
   <v-slider id="pos-slider" v-if="playerStatus.current.duration>0" class="np-slider" :value='playerStatus.current.time' :max='playerStatus.current.duration' @click.native="sliderChanged($event)"></v-slider>
  </div>
  <div v-if="info.show" class="np-info">
@@ -92,7 +92,8 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
   <v-layout text-xs-center row wrap class="np-controls">
    <v-flex xs3 class="np-pos" v-if="!info.show">{{playerStatus.current.time | displayTime}}</v-flex>
    <v-flex xs6 class="np-tech">{{playerStatus.current.technicalInfo}}</v-flex>
-   <v-flex xs3 class="np-duration" v-if="!info.show">{{playerStatus.current.duration | displayTime}}</v-flex>
+   <v-flex xs3 class="np-duration cursor" v-if="!info.show && (showTotal || !playerStatus.current.time)" @click="toggleTime()">{{playerStatus.current.duration | displayTime}}</v-flex>
+   <v-flex xs3 class="np-duration cursor" v-else-if="!info.show && !showTotal" @click="toggleTime()">-{{playerStatus.current.duration-playerStatus.current.time | displayTime}}</v-flex>
    <v-flex xs12 v-if="!info.show && playerStatus.current.duration>0"><v-slider id="pos-slider" class="np-slider" :value='playerStatus.current.time' :max='playerStatus.current.duration' @click.native="sliderChanged($event)"></v-slider></v-flex>
    <v-flex xs4>
     <v-layout text-xs-center>
@@ -139,11 +140,11 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
                  menu: { show: false, x:0, y:0, text: undefined },
                  trans: { close: undefined,
                           repeatAll:undefined, repeatOne:undefined, repeatOff:undefined,
-                          shuffleAll:undefined, shuffleAlbums:undefined, shuffleOff:undefined }
+                          shuffleAll:undefined, shuffleAlbums:undefined, shuffleOff:undefined },
+                 showTotal: true
                 };
     },
     mounted() {
-
         bus.$on('playerStatus', function(playerStatus) {
             // Has cover changed?
             if (playerStatus.playlist.count == 0) {
@@ -257,6 +258,8 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
                 this.info.show=!this.info.show;
             }
         }.bind(this));
+
+        this.showTotal = getLocalStorageBool('showTotal', true);
     },
     methods: {
         initItems() {
@@ -369,6 +372,10 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
                 clearInterval(this.positionInterval);
                 this.positionInterval = undefined;
             }
+        },
+        toggleTime() {
+            this.showTotal = !this.showTotal;
+            setLocalStorageVal("showTotal", this.showTotal);
         }
     },
     filters: {
@@ -395,9 +402,12 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
         },
         formattedTime() {
             return this.playerStatus && this.playerStatus.current
-                        ? (this.playerStatus.current.time ? formatSeconds(Math.floor(this.playerStatus.current.time)) : "") +
-                          (this.playerStatus.current.time && this.playerStatus.current.duration ? " / " : "") +
-                          (this.playerStatus.current.duration ? formatSeconds(Math.floor(this.playerStatus.current.duration)) : "")
+                        ? !this.showTotal && this.playerStatus.current.time && this.playerStatus.current.duration
+                            ? formatSeconds(Math.floor(this.playerStatus.current.time))+" / -"+
+                              formatSeconds(Math.floor(this.playerStatus.current.duration-this.playerStatus.current.time))
+                            : (this.playerStatus.current.time ? formatSeconds(Math.floor(this.playerStatus.current.time)) : "") +
+                              (this.playerStatus.current.time && this.playerStatus.current.duration ? " / " : "") +
+                              (this.playerStatus.current.duration ? formatSeconds(Math.floor(this.playerStatus.current.duration)) : "")
                         : undefined;
         }
     },
