@@ -18,6 +18,7 @@
     last 6 seconds of a track.
 14. Change clear queue icon to something (hopefully) more obvious.
 15. Fix fetching more than 100 items in queue.
+16. Click on song duration to toggle showing duration / time remaining.
 
 0.1.1
 -----
